Added CSS & formatting to first two lines of intro animation on coming soon page

--- a/crochet-hub-pattern-post.html
+++ b/crochet-hub-pattern-post.html
@@ -60,8 +60,8 @@
                 <h1>JW Anderson Inspired, Light Up Crochet Cardigan | Free Pattern & Turotial</h1>
                 <h3 class="blog-post-metadata">Posted on December 01, 2020 by <span>Emmy</span></h3>
                 <aside class="pattern-section-jump sticky">
-                    <h2>Jump to:</h2>
                     <div class="pattern-section-jump-buttons">
+                        <h3>Jump to:</h3>
                         <button><a href="#materials">Materials</a></button>
                         <button><a href="#circuit-diagram">Circuit Diagram</a></button>
                         <button><a href="#pattern">Pattern</a></button>
@@ -74,14 +74,16 @@
                 <p>Ornare massa eget egestas purus viverra accumsan in nisl nisi. Lacus sed viverra tellus in hac habitasse platea dictumst. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Ac turpis egestas maecenas pharetra convallis posuere morbi leo. Pellentesque elit eget gravida cum sociis natoque penatibus et magnis. Ultrices vitae auctor eu augue. Turpis tincidunt id aliquet risus feugiat. Nulla facilisi etiam dignissim diam quis. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Aliquam etiam erat velit scelerisque in dictum. Eget magna fermentum iaculis eu non diam. Sit amet justo donec enim diam vulputate. Amet nulla facilisi morbi tempus iaculis. Dictum varius duis at consectetur lorem.</p>
                 <div id="materials">
                     <h2>Materials</h2>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>consectetur adipiscing elit</li>
-                        <li>sed do eiusmod tempor incididunt</li>
-                        <li>ut labore et dolore magna aliqua.</li>
-                        <li>Vitae elementum curabitur vitae nunc sed.</li>
-                        <li>Viverra ipsum nunc aliquet bibendum enim</li>
-                    </ul>
+                    <div class="content-wrapper">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet</li>
+                            <li>consectetur adipiscing elit</li>
+                            <li>sed do eiusmod tempor incididunt</li>
+                            <li>ut labore et dolore magna aliqua.</li>
+                            <li>Vitae elementum curabitur vitae nunc sed.</li>
+                            <li>Viverra ipsum nunc aliquet bibendum enim</li>
+                        </ul>
+                    </div>
                 </div>
                 <div id="circuit-diagram">
                     <h2>Circuit Diagram</h2>
