--- a/coming-soon.html
+++ b/coming-soon.html
@@ -47,12 +47,12 @@
     <section id="coming-soon-page">
         <aside class="intro-text">
             <h1>
-              <span>H</span><span>i</span><span>!</span>
+              <span>Hi!</span>
             </h1>
             <h1>
-              <span>I</span><span>'</span><span>m</span> <span>Emery.</span>
+              <span>I'm</span> <span>Emery.</span>
             </h1>
-            <h2>I'm a <span>web developer</span> and <span>multi-disciplinary artist.</span></h2>
+            <h1><span>I'm a</span> <span>web developer, writer,</span> <span>and</span> <span>multi-disciplinary artist.</span></h1>
             This studio space will document my projects and journey as I explore
         the intersections of technology, art, and identity.
 
