Added animation for third line of introduction

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -52,7 +52,9 @@
             <h1>
               <span>I'm</span> <span>Emery.</span>
             </h1>
-            <h1><span>I'm a</span> <span>web developer, writer,</span> <span>and</span> <span>multi-disciplinary artist.</span></h1>
+            <h1>
+              <span>I'm a</span> <span>web developer, writer, and</span> <span>multi-disciplinary artist.</span>
+            </h1>
             This studio space will document my projects and journey as I explore
         the intersections of technology, art, and identity.
 
