Added animations for the entire introductory paragraph on coming soon page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -46,18 +46,26 @@
     </section>
     <section id="coming-soon-page">
         <aside class="intro-text">
+          <!-- h1 #1 -->
             <h1>
               <span>Hi!</span>
             </h1>
+          <!-- h1 #2 -->
             <h1>
               <span>I'm</span> <span>Emery.</span>
             </h1>
+          <!-- h1 #3 -->
             <h1>
               <span>I'm a</span> <span>web developer, writer, and</span> <span>multi-disciplinary artist.</span>
             </h1>
-            This studio space will document my projects and journey as I explore
-        the intersections of technology, art, and identity.
-
+          <!-- h1 #4 -->
+            <h1>
+              <span>This studio space will document my projects and journey</span> <span>as I explore</span> <span>the intersections of</span> <span>technology, art, and identity.</span>
+            </h1>
+          <!-- h1 #5 -->
+            <h1>
+              <span>But for now, it's still a work in progress!</span>
+            </h1>
         </aside>
     </section>
   </main>
