Added styles for a project spotlight section that will highlight the latest content & works in progress for each hub

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -52,7 +52,7 @@
             </h1>
           <!-- h1 #2 -->
             <h1>
-              <span>I'm</span> <span>Emery.</span>
+              <span>I'm</span> <custom-span>Emery.</custom-span>
             </h1>
           <!-- h1 #3 -->
             <h1>
@@ -78,7 +78,7 @@
       </h1>
       <div class="footer-social-media">
         <a href="https://twitter.com/emmydoesit" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-        <a href="https://instagram.com/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
+        <a href="https://instagram.com/emerydotstudio" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
         <a href="https://emery.studio/" target="_blank"><i class="fas fa-palette fa-2x"></i></a>
         <a href="https://ko-fi.com/" target="_blank"><i class="fas fa-mug-hot fa-2x"></i></a>
       </div>
