--- a/hub-index.html
+++ b/hub-index.html
@@ -38,7 +38,7 @@
       <i class="fas fa-code fa-2x"></i>
       <nav>
         <ul>
-          <li><a href="hub-index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
@@ -51,6 +51,32 @@
         <h1 class="hero-logo-span">
           emery<span>.</span>studio
         </h1>
+        <div class="project-spotlight">
+          <aside>
+            <h2>Current Projects & WIPs</h2>
+            <h3>Follow the journey!</h3>
+            <ul>
+              <li>
+                <a href="#">Simery</a>
+                <span>Learning Python in order to mod The Sims</span>
+              </li>
+              <li>
+                <a href="https://thelezagenda.com/">TheLezAgenda</a>
+                <span>WordPress powered Lesbian culture blog, custom theme development.</span>
+              </li>
+              <li>
+                <a href="#">Skate Day</a>
+                <span>Web App for checking safe skating conditions</span>
+              </li>
+            </ul>
+          </aside>
+          <aside>
+            <h2>Latest Portfolio Project</h2>
+            <img src="img/gen-q-filler-01.png" alt="Portfolio Project description" />
+            <h3>Project Name</h3>
+            <a href="#" class="view-more">View More &#8250;</a>
+          </aside>
+        </div>
       </div>
     </section>
     <section id="main-content">
